# Trabajo-Practico-N3

./: .gitignore  CMakeLists.txt  TP3 refactorizacion.slnx
TP3 refactorizacion/: README.md  TP3 refactorizacion.vcxproj  TP3 refactorizacion.vcxproj.filters  main.cpp
TP3 refactorizacion/include/: impresiones.h  nodos.h  redundancias.h
TP3 refactorizacion/lib/: nodos.cpp  redundancias.cpp
TP3 refactorizacion/src/: consigna1.cpp  consigna1.h  consigna2.cpp  consigna2.h  consigna3.cpp  consigna3.h  consigna4.cpp  consigna4.h  consigna5.cpp  consigna5.h  masi.h
TP3 refactorizacion/x64/Debug/: TP3 refactorizacion.exe.recipe  TP3 refactorizacion.ilk  nodos.obj.enc  vc145.idb
TP3 refactorizacion/x64/Debug/TP3 refa.e66b7535.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TP3 refactorizacion.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TP3_Cmake_ver/: CMakeLists.txt  README.md  main.cpp
TP3_Cmake_ver/include/: COMMON.h  consigna1.h  consigna2.h  consigna3.h  consigna4.h  consigna5.h  impresiones.h  nodos.h  redundancias.h
TP3_Cmake_ver/lib/: nodos.cpp  redundancias.cpp
TP3_Cmake_ver/src/: consigna1.cpp  consigna2.cpp  consigna3.cpp  consigna4.cpp  consigna5.cpp
